# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RayTracingAlgorithmList.md
scenes/: scene0.test  scene00.test  scene1.test  scene3.test  scene4.scene  test_1.json
src/: Makefile  camera.cpp  camera.hpp  color.hpp  direction.hpp  gl_typedef.hpp  intersect_result.hpp  light.cpp  light.hpp  lighting.hpp  main.cpp  material.hpp  plane.cpp  plane.hpp  position.hpp  ray.hpp  ray_distance.hpp  scene.cpp  scene.hpp  sceneRW.cpp  sceneRW.hpp  scene_builder.cpp  scene_builder.hpp  scene_builder2.cpp  shape.hpp  sphere.cpp  sphere.hpp  test_shape.cpp  test_shape.hpp  tracer.cpp  tracer.hpp  unit_tests.cpp  util.hpp  view.hpp
test/: builder_test.cpp  camera_test.cpp  light_test.cpp  plane_test.cpp  ray_test.cpp  sphere_test.cpp  test_utils.hpp  tracer_test.cpp
